[package]
name = 'pallet-dotmog'
version = '0.1.0'
description = 'DOTMog pallet for the game DOTMog.'
authors = ['Jeton Network <https://github.com/JetonNetwork>']
edition = '2018'
homepage = 'https://dotmog.com'
license = 'Apache-2.0'
repository = 'https://github.com/dotmog/pallet-dotmog/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# third-party dependencies
serde = '1.0.119'
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}

# primitives
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# node-primitives = {default-features = false, version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
#    'sp-io/std',
]
try-runtime = ['frame-support/try-runtime']
