[package]
name = 'pallet-dotmog'
version = '0.1.0'
description = 'DOTMog pallet for the game DOTMog.'
authors = ["DOT Mog Team <adming@dotmog.com>"]
edition = '2018'
homepage = 'https://dotmog.com'
license = 'Apache-2.0'
repository = 'https://github.com/dotmog/pallet-dotmog/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# third-party dependencies
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# primitives
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
# node-primitives = {default-features = false, version = '2.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}

# Substrate dependencies
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
frame-benchmarking = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0', optional = true}

[dev-dependencies]
sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
pallet-balances = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}

[features]
default = ['std']
std = [
	'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
	"sp-std/std",
    'sp-core/std',
	'frame-benchmarking/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'sp-runtime/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
